--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,16 @@
 # Mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/wechat?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/lingxi?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=8686886a
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# HikariCP
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.pool-name=MyHikariPool
 
 # JPA
 spring.jpa.hibernate.ddl-auto=update
@@ -9,5 +18,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # JWT
-jwt.secret=
-jwt.expiration=86400000  # 1 day in milliseconds
+jwt.secret=L6+7gwZKuxgaHP0OUEfwKIXU6CLKi1LyUKIG6Tv6loc=
+jwt.expiration=86400000
