--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # JWT
 jwt.secret=L6+7gwZKuxgaHP0OUEfwKIXU6CLKi1LyUKIG6Tv6loc=
 jwt.expiration=86400000
+
+# Log
+logging.level.root=info
+logging.level.com.zifan=debug
+logging.file.name=logs/app.log
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
