support friendship module

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,14 +28,21 @@ logging.file.name=logs/app.log
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 
+
 # MongoDB
-spring.data.mongodb.uri=mongodb://root:root123@localhost:27017/lingxi
+spring.data.mongodb.uri=mongodb://lingxi_user:lingxi123@localhost:27017/lingxi?authSource=lingxi
 
 # RabbitMQ
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=admin
 spring.rabbitmq.password=admin123
+
+# STOMP
+spring.websocket.stomp.broker.relay.host=localhost
+spring.websocket.stomp.broker.relay.port=61613
+spring.websocket.stomp.broker.relay.client-login=admin
+spring.websocket.stomp.broker.relay.client-passcode=admin123
 
 # WebSocket
 server.port=8080
