--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,12 @@ spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.pool-name=MyHikariPool
 
+# Redis Configuration
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=redis123
+spring.redis.timeout=5000
+
 # JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
